--- a/LoLympics/Base.lproj/Main.storyboard
+++ b/LoLympics/Base.lproj/Main.storyboard
@@ -32,7 +32,6 @@
             <string>Ionicons</string>
             <string>Ionicons</string>
             <string>Ionicons</string>
-            <string>Ionicons</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -1929,68 +1928,28 @@
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="count_bg" translatesAutoresizingMaskIntoConstraints="NO" id="EOb-eL-Dqc">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="233"/>
                                     </imageView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="itH-OF-Az4" customClass="TextFieldViewStyle" customModule="LoLympics" customModuleProvider="target">
-                                        <rect key="frame" x="111" y="40" width="248" height="32"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O4D-3L-59r">
-                                                <rect key="frame" x="4" y="6" width="21" height="21"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="21" id="bWw-is-7wH"/>
-                                                    <constraint firstAttribute="width" constant="21" id="rai-R1-FyM"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" name="Ionicons" family="Ionicons" pointSize="17"/>
-                                                <color key="textColor" red="0.85098039219999999" green="0.85098039219999999" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="8QR-ZL-INe">
-                                                <rect key="frame" x="27" y="2" width="221" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="30" id="9eY-mv-Ktk"/>
-                                                    <constraint firstAttribute="width" constant="173" id="pj1-NV-NOZ"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                                <variation key="default">
-                                                    <mask key="constraints">
-                                                        <exclude reference="pj1-NV-NOZ"/>
-                                                    </mask>
-                                                </variation>
-                                            </textField>
-                                        </subviews>
+                                    <searchBar clipsSubviews="YES" contentMode="redraw" searchBarStyle="prominent" placeholder="Search" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tOx-MJ-91M" customClass="SearchBarView" customModule="LoLympics" customModuleProvider="target">
+                                        <rect key="frame" x="111" y="40" width="248" height="30"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="248" id="7TO-om-hfa"/>
-                                            <constraint firstItem="O4D-3L-59r" firstAttribute="leading" secondItem="itH-OF-Az4" secondAttribute="leading" constant="4" id="RmU-oD-QQL"/>
-                                            <constraint firstItem="8QR-ZL-INe" firstAttribute="leading" secondItem="O4D-3L-59r" secondAttribute="trailing" constant="2" id="V7B-Sv-oeD"/>
-                                            <constraint firstAttribute="height" constant="32" id="Yki-V0-Smx"/>
-                                            <constraint firstAttribute="bottom" secondItem="8QR-ZL-INe" secondAttribute="bottom" id="hmp-cM-ZNg"/>
-                                            <constraint firstAttribute="trailing" secondItem="8QR-ZL-INe" secondAttribute="trailing" id="iWN-nd-Q6U"/>
-                                            <constraint firstAttribute="bottom" secondItem="O4D-3L-59r" secondAttribute="bottom" constant="5" id="nsn-72-uWc"/>
-                                        </constraints>
-                                    </view>
-                                    <searchBar clipsSubviews="YES" contentMode="redraw" searchBarStyle="minimal" placeholder="Search" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tOx-MJ-91M">
-                                        <rect key="frame" x="103" y="32" width="264" height="40"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="86Z-oy-B7k"/>
+                                            <constraint firstAttribute="height" constant="30" id="86Z-oy-B7k"/>
                                             <constraint firstAttribute="width" constant="264" id="e0L-aE-hks"/>
                                         </constraints>
+                                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="e0L-aE-hks"/>
+                                            </mask>
+                                        </variation>
                                     </searchBar>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="tOx-MJ-91M" secondAttribute="trailing" constant="8" id="8ug-Pe-V2f"/>
-                                    <constraint firstAttribute="bottom" secondItem="tOx-MJ-91M" secondAttribute="bottom" constant="8" id="Jse-Qn-gHZ"/>
-                                    <constraint firstItem="itH-OF-Az4" firstAttribute="top" secondItem="QBf-ZX-gBo" secondAttribute="top" constant="40" id="TUC-Qd-gsl"/>
-                                    <constraint firstAttribute="trailing" secondItem="itH-OF-Az4" secondAttribute="trailing" constant="16" id="wCa-5k-qdW"/>
+                                    <constraint firstAttribute="trailing" secondItem="tOx-MJ-91M" secondAttribute="trailing" constant="16" id="8ug-Pe-V2f"/>
+                                    <constraint firstAttribute="bottom" secondItem="tOx-MJ-91M" secondAttribute="bottom" constant="10" id="Jse-Qn-gHZ"/>
                                     <constraint firstAttribute="height" constant="80" id="xHJ-dR-grB"/>
                                 </constraints>
-                                <variation key="default">
-                                    <mask key="subviews">
-                                        <exclude reference="tOx-MJ-91M"/>
-                                    </mask>
-                                </variation>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ORD-B6-GJO">
                                 <rect key="frame" x="111" y="100" width="248" height="500"/>
@@ -2012,7 +1971,7 @@
                                                         <constraint firstAttribute="height" constant="21" id="84y-cj-3cy"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a55-SU-Aq8">
@@ -2058,7 +2017,7 @@
                                                         <constraint firstAttribute="height" constant="21" id="xzk-vs-Fq8"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c81-Oz-Ea8">
@@ -2078,6 +2037,9 @@
                                                 <constraint firstItem="c81-Oz-Ea8" firstAttribute="leading" secondItem="Ec0-sO-7Yk" secondAttribute="leading" constant="16" id="gab-VW-NY4"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="searchLbl" destination="8pg-oD-HUB" id="anF-8O-OpS"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -2088,6 +2050,7 @@
                             <constraint firstAttribute="trailing" secondItem="DoZ-b6-WXE" secondAttribute="trailing" constant="16" id="Gbt-43-3GU"/>
                             <constraint firstItem="QBf-ZX-gBo" firstAttribute="leading" secondItem="4sL-zx-aGJ" secondAttribute="leading" id="Mp8-l8-WkZ"/>
                             <constraint firstItem="CQ9-kD-ccp" firstAttribute="top" secondItem="ORD-B6-GJO" secondAttribute="bottom" id="OrZ-7M-ImS"/>
+                            <constraint firstItem="ORD-B6-GJO" firstAttribute="width" secondItem="tOx-MJ-91M" secondAttribute="width" id="PTl-kW-mk5"/>
                             <constraint firstItem="QBf-ZX-gBo" firstAttribute="top" secondItem="4sL-zx-aGJ" secondAttribute="top" id="bV0-VG-2ow"/>
                             <constraint firstItem="DoZ-b6-WXE" firstAttribute="top" secondItem="jk2-6W-tAr" secondAttribute="bottom" constant="80" id="e6I-oH-JSn"/>
                             <constraint firstItem="CQ9-kD-ccp" firstAttribute="top" secondItem="DoZ-b6-WXE" secondAttribute="bottom" id="kc2-6e-WYS"/>
@@ -2099,6 +2062,7 @@
                     <size key="freeformSize" width="375" height="600"/>
                     <connections>
                         <outlet property="categoryTableView" destination="ORD-B6-GJO" id="p8j-Q9-s3M"/>
+                        <outlet property="customSearchBar" destination="tOx-MJ-91M" id="Bci-iq-Cqk"/>
                         <outlet property="searchTableView" destination="DoZ-b6-WXE" id="0Yx-KH-dpJ"/>
                         <segue destination="4Ha-oY-g2l" kind="show" identifier="MainVC" id="IhS-C5-udh"/>
                     </connections>
@@ -2749,6 +2713,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="IhS-C5-udh"/>
-        <segue reference="9OC-pK-jr8"/>
+        <segue reference="tqm-Hi-gbU"/>
     </inferredMetricsTieBreakers>
 </document>
